--- a/bjs/07_Number_and_string/style.css
+++ b/bjs/07_Number_and_string/style.css
@@ -7,3 +7,26 @@
     text-align: end;
     font-size: x-large;
 }
+
+.btn {
+    margin-top: 1px;
+    margin-bottom: 1px;
+    margin-left: -4px;
+    margin-right: -4px;
+    color: rgb(0, 0, 0);
+    background-color: rgb(224, 235, 236);
+    border-radius: 50%;
+    border: thick double rgb(97, 188, 224);
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.container {
+background-color: aquamarine;
+
+
+}
+
+.card-body {
+    background-color: rgb(174, 220, 231);
+    border: solid black;
+}
